# anonminer

./: .gitignore  Cargo.toml  Makefile  README.md  analyze_hashes.sh
src/: display.rs  gui.rs  gui_data.rs  hash_logger.rs  hash_rate.rs  main.rs  stratum.rs  worker.rs
src/stratum/: rpc.rs
src/stratum/rpc/: request.rs  response.rs
