[package]
name = "anonminer"
version = "0.1.1"
authors = [""]
edition = "2021"
description = "RandomX CPU miner written in rust for standard Stratum pools"
repository = "https://github.com/emjomi/anonminer"
license = "Apache-2.0"
keywords = ["miner", "cpuminer", "randomx-miner"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.29.0"
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = "1.5.0"
once_cell = "1.21.3"
owo-colors = "4.1.0"
randomx-rs = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sysinfo = "0.36.1"
tracing = { version = "0.1.40", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing-subscriber = "0.3.18"
tui = "0.19.0"
watch = "0.2.3"

# Huge pages support
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
os_pipe = "1.2"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3
# strip = "symbols"
debug = true # Include debug information for profiling
overflow-checks = false
